force-app/main/default/objects/sugati__Flight_Alert__c/sugati__Flight_Alert__c.object-meta.xml
<CustomObject>
    <label>Flight Alert</label>
    <nameField>
        <displayFormat>FA{YYYY}{MM}-{0000}</displayFormat>
        <label>Flight Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>