force-app/main/default/objects/sugati__Flight_Alert__c/fields/sugati__S_FA_Alert_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FA_Alert_Rule_Id__c</fullName>
    <label>Alert Rule Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>