force-app/main/default/objects/sugati__Flight_Alert__c/fields/sugati__S_FA_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FA_Departure_Date__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>