force-app/main/default/objects/sugati__Flight_Alert__c/fields/sugati__S_FA_Events__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FA_Events__c</fullName>
    <label>Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>