force-app/main/default/objects/sugati__Flight_Alert__c/fields/sugati__S_FA_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FA_Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>